--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/spit/partials/_forms.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/spit/partials/_forms.sass
@@ -63,10 +63,16 @@ label
   width: 25%
   float: left
 
+#edit-submitted-field-webform-email
+  width: 35%
+
+.form-actions.form-wrapper
+  width: 15%
+
 /* centers wrappers contained within floated segments */
 #submitted-field-webform-email-add-more-wrapper, #submitted-field-webform-mobile-add-more-wrapper, #contact-form h3
+  width: 90%   
   margin: 0 auto 
-  width: 80%   
 
 //      //
 //  #sign-up
